@@ -1,3 +1,7 @@
+2015-01-22  Even Rouault  <even.rouault@spatialys.com>
+
+	* tools/tiff2pdf.c: Fix two crashes (oCERT-2014-013)
+
 2015-01-05  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* html/bugs.html: remove note about needing to email the tiff mailing
